Switched to MongoDB Kafka Connector Docker sandbox

--- a/archive/1-install-kafka/connect-mongodb-sink.properties
+++ b/archive/1-install-kafka/connect-mongodb-sink.properties
@@ -14,5 +14,5 @@ value.converter.schemas.enable=false
 # Running in Atlas? connection.uri=mongodb+srv://DBUSER:DBPASSWD@FQDN/COVID
 connection.uri=MDB_CONNECT_URI
 database=COVID
-collection=cases
+COLLECTION=cases
 
